--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1"
+      content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <title>Vocabulary Cards</title>
